TP1/Calculadora/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:08:59 **** Rebuild of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\trabajoPractico1.o" "..\\src\\trabajoPractico1.c" 
..\src\trabajoPractico1.c: In function 'systemPause':
..\src\trabajoPractico1.c:19:5: warning: implicit declaration of function 'getch' [-Wimplicit-function-declaration]
     getch();
     ^~~~~
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
Info: Nothing to build for Calculadora
Info: Nothing to build for Calculadora
13:07:43 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
..\src\Calculadora.c: In function 'main':
..\src\Calculadora.c:223:12: error: 'EXIT_SUCCES' undeclared (first use in this function)
     return EXIT_SUCCES;
            ^~~~~~~~~~~
..\src\Calculadora.c:223:12: note: each undeclared identifier is reported only once for each function it appears in
13:07:50 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
..\src\Calculadora.c: In function 'main':
..\src\Calculadora.c:223:12: error: 'EXIT_SUCCES' undeclared (first use in this function)
     return EXIT_SUCCES;
            ^~~~~~~~~~~
..\src\Calculadora.c:223:12: note: each undeclared identifier is reported only once for each function it appears in
13:08:02 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
Info: Nothing to build for Calculadora
13:10:54 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
13:14:15 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\trabajoPractico1.o" "..\\src\\trabajoPractico1.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
Info: Nothing to build for Calculadora
Info: Nothing to build for Calculadora
19:12:14 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\trabajoPractico1.o" "..\\src\\trabajoPractico1.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
19:29:23 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
20:14:27 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\trabajoPractico1.o" "..\\src\\trabajoPractico1.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
20:28:58 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\trabajoPractico1.o" "..\\src\\trabajoPractico1.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
20:31:46 **** Incremental Build of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\trabajoPractico1.o" "..\\src\\trabajoPractico1.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
19:50:44 **** Rebuild of configuration Debug for project Calculadora ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\trabajoPractico1.o" "..\\src\\trabajoPractico1.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Calculadora.o" "..\\src\\Calculadora.c" 
gcc -o Calculadora.exe "src\\Calculadora.o" "src\\trabajoPractico1.o" 
Info: Nothing to build for Calculadora
Info: Nothing to build for Calculadora
